# Techncial-Analysis-Machine

./: .gitignore  README.md  agents.md  plan.md  pyproject.toml
config/: default.toml
data/manual/: goog_universe.csv  nasdaq100_constituents_history.csv  starter_universe.csv
data/processed/: constituent_history_quality_report.csv  goog_5y_parameter_sweep.csv  goog_parameter_sweep.csv  nvda_5y_parameter_sweep.csv  nvda_parameter_sweep.csv  ohlcv_quality_report.csv
data/processed/calibration/: mcp_backtest_strategy_goog_nvda_2y.json  mcp_vs_local_comparison.csv
data/processed/dca_timing_comparison/: dca_vs_technical_timing.xlsx  findings.md  (+1 more)
data/raw/: current_nasdaq100.csv
pine_scripts/: GOOG_EMA_15_60_5Y_Optimized.pine  NVDA_Volume_Breakout_5Y_Optimized.pine
scripts/: __init__.py  backtest_portfolio.py  backtest_symbol_strategies.py  calibrate_against_mcp.py  dca_timing_comparison.py  download_ohlcv.py  fetch_current_nasdaq100.py  import_nasdaq100_wikipedia_history.py  optimize_top_n_nasdaq.py  robustness_report.py  serve_ui.py  validate_data_integrity.py  walk_forward_symbol.py  walkforward_dca_timing.py
src/regime_alpha/: __init__.py  backtest.py  data_quality.py  filters.py  indicators.py  io.py  metadata.py  portfolio.py  regime.py  research.py  robustness.py  strategies.py  universe.py  walk_forward.py
tests/: test_backtest.py  test_data_quality.py  test_metadata.py  test_portfolio.py  test_research.py  test_robustness.py  test_strategies.py  test_universe.py  test_walk_forward.py  test_wikipedia_importer.py
web/: app.js  index.html  styles.css
(+408 files in other folders)
