[project]
name = "regime-alpha-framework"
version = "0.1.0"
description = "Regime-based systematic trading research scaffold for Nasdaq-100 equities."
requires-python = ">=3.11"
dependencies = [
    "lxml>=5.0",
    "numpy>=1.26",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "yfinance>=0.2.50",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/regime_alpha"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = ["-p", "no:capture"]
